test/compile_errors/err_recovery_sema_suppress.w
//! expect-error: expected expression

fn main:
    let x = !!!
    let y = 10
    print(f"{y}")
